premiere version de la page d'accueil/inscription

--- a/toDoFront/package.json
+++ b/toDoFront/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "to-do-front",
+  "name": "to-do",
   "description": "A Vue.js project",
   "version": "1.0.0",
   "author": "DESKTOP-EPCPNTK\\Vince <vincent.grandiere@gmail.com>",
