--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ node_js:
   - "6.9.2"
 notifications:
   email: false
-
+  
+before_script:
+  chmod XXX -R scriptTest.pl
 
 script: 
   scriptTest.pl
