--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ notifications:
   email: false
   
 before_script:
-  chmod XXX -R scriptTest.pl
+  chmod 777 -R scriptTest.pl
 
 script: 
   scriptTest.pl
