--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
+
 node_js:
   - "6.9.2"
-notifications:
-  - email: false
   
 before_script:
   - chmod 777 -R scriptTest.pl
@@ -10,4 +9,5 @@ before_script:
 script: 
   - scriptTest.pl
 
- 
+notifications:
+  email: false
