--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   - chmod 777 -R scriptTest.pl
 
 script: 
-  - scriptTest.pl
+  - perl scriptTest.pl
 
 notifications:
   email: false
