update du gitignore qui ignore maintenant toDoApi/node_modules/* et installation du package de gestion des tests unitaires mocha

--- a/toDoApi/package.json
+++ b/toDoApi/package.json
@@ -15,7 +15,9 @@
   },
   "description": "toDo project is a school project written in node",
   "version": "0.0.0",
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^3.2.0"
+  },
   "author": "Giom, Veuch & Inspector GrandZob",
   "license": "ISC"
 }
