installation du package de gestion des tests unitaires chai

--- a/toDoApi/package.json
+++ b/toDoApi/package.json
@@ -16,6 +16,7 @@
   "description": "toDo project is a school project written in node",
   "version": "0.0.0",
   "devDependencies": {
+    "chai": "^3.5.0",
     "mocha": "^3.2.0"
   },
   "author": "Giom, Veuch & Inspector GrandZob",
