--- a/toDoApi/package.json
+++ b/toDoApi/package.json
@@ -17,7 +17,8 @@
   "version": "0.0.0",
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "supertest": "^3.0.0"
   },
   "author": "Giom, Veuch & Inspector GrandZob",
   "license": "ISC"
