--- a/toDoFront/package.json
+++ b/toDoFront/package.json
@@ -2,7 +2,7 @@
   "name": "to-do",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "DESKTOP-EPCPNTK\\Vince <vincent.grandiere@gmail.com>",
+  "author": "Veuch, Giom et Inspector GrandZob",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
