--- a/toDoApi/package.json
+++ b/toDoApi/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon server.js",
-    "test": "NODE_ENV=test nodemon server.js"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha"
   },
   "description": "toDo project is a school project written in node",
   "version": "0.0.0",
