--- a/toDoFront/package.json
+++ b/toDoFront/package.json
@@ -5,9 +5,9 @@
   "author": "Veuch, Giom et Inspector GrandZob",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "test": "./node_modules/.bin/mocha"
+    "test": "karma start karma.conf.js"
   },
   "dependencies": {
     "vue": "^2.1.0",
@@ -18,11 +18,10 @@
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
-    "chai": "^3.5.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
-    "mocha": "^3.2.0",
+    "karma-webpack": "^2.0.2",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.2.0",
