correction package.json

--- a/toDoApi/package.json
+++ b/toDoApi/package.json
@@ -16,6 +16,6 @@
   "description": "toDo project is a school project written in node",
   "version": "0.0.0",
   "devDependencies": {},
-  "author": "Giom, Veuch & Inspector GrandZob",
+  "author": "Giom, Veuch & Inspector miniZob",
   "license": "ISC"
 }
