--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,22 @@ language: node_js
 
 node_js:
   - "6.9.2"
-  
+
 before_script:
   - chmod 777 -R scriptTest.pl
 
-script: 
+script:
   - perl scriptTest.pl
 
 notifications:
   email: false
-  
+
+script: |
+  npm run build
+
 deploy:
   provider: script
   skip_cleanup: true
-  script: curl -u ${DEPLOY_USER}:${DEPLOY_PASS} -X POST https://docker-api.vibioh.fr/containers/spring/ --data-binary @docker-compose.yml
+  script: curl -u ${DEPLOY_USER}:${DEPLOY_PASS} -X POST https://docker.l3miage.fr/ --data-binary @docker-compose.yml
   on:
     branch: docker
