--- a/toDoFront/package.json
+++ b/toDoFront/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "vue": "^2.1.0",
     "vue-resource": "^1.1.1",
-    "vue-router": "^2.2.0"
+    "vue-router": "^2.2.0",
+    "vuedraggable": "^2.8.3-rc0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
