--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,7 @@ before_script:
 
 script:
   - perl scriptTest.pl
+  - npm run build
 
 notifications:
   email: false
-
-script: |
-  npm run build
-
-deploy:
-  provider: script
-  skip_cleanup: true
-  script: curl -u ${DEPLOY_USER}:${DEPLOY_PASS} -X POST https://docker.l3miage.fr/ --data-binary @docker-compose.yml
-  on:
-    branch: docker
