--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 
 before_script:
   - chmod 777 -R scriptTest.pl
-  - chmod 777 -R /toDoApi
+  - chmod 777 -R toDoApi
 
 script:
   - perl scriptTest.pl
