add test travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ node_js:
 before_script:
   - chmod 777 -R scriptTest.pl
   - chmod 777 -R toDoApi
-
+  - cd toDoApi
+  
 script:
-  - perl scriptTest.pl
   - npm run build
 
 notifications:
