add test travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 before_script:
   - chmod 777 -R scriptTest.pl
   - chmod 777 -R toDoApi
-  - cd toDoApi
+  - cd /toDoApi
 
 script:
   - npm run build
